# transcription_pipeline

./: .buildinfo  .gitignore  .pyproject.toml.swp  .transcription_pipeline.yml.swp  AGENTS.md  APAxis.ipynb  APAxis_AutoCorr.ipynb  Data_Process_Notebook.ipynb  Dl-localEnrichment.ipynb  MS2_analysis.ipynb  MS2_analysis_streamlined.ipynb  MS2_analysis_streamlined_for0725Var2Embryo.ipynb  Modify_metadata.ipynb  README.md  RateExtraction Analysis.ipynb  Untitled.ipynb  environment.yml  genindex.html  index.html  input_output_MCP-HaloTag.ipynb  input_output_walkthrough.ipynb  josh_analysis.ipynb  josh_bin_fit_average.ipynb  make_movie.py  modules.html  nick_analysis.ipynb  notch_analysis.yml  objects.inv  pipeline.py  py-modindex.html  pyproject.toml  rate_extraction_analysis.ipynb  requirements.txt  search.html  searchindex.js  setup.py  test.ipynb  time_filter.ipynb  time_filter.py  transcription_pipeline.html  (+6 more)
.ipynb_checkpoints/: README-checkpoint.md  environment-checkpoint.yml  pipeline-checkpoint.py  requirements-checkpoint.txt  test-checkpoint.ipynb
MCMC Test/: MCMC_1BS.ipynb  MCMC_1BS_simData.ipynb  MCMC_1BS_simData_new.ipynb  TFinput.mat  data.mat
Napari_Movie_Config/: 2025-04-17_ms2_BrunoExample.yaml
SNR_quant/: signal_vs_bkg.ipynb
localEnrichment/: Dl_localEnrichment.ipynb  Rpb1_localEnrichment.ipynb  cluster_detection.ipynb
nuclear_analysis/: segmentation.py
nuclear_segmentation/: segment_nuclei.py  segmentation.py
preprocessing/: import_data.py  process_metadata.py
runtSynthetics/: Josh_import_tracking.ipynb  average_fit.ipynb  fit_average.ipynb  (+14 more)
(+76 files in other folders)
