[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "transcription_pipeline"
version = "0.0.1"
dependencies = [
    "matplotlib",
    "napari[all]",
    "trackpy",
    "numba",
    "jpype1",
    "dask[complete]==2023.5.1",
    "deprecation==2.1.0",
    "numpy==1.24.4",
    "pandas==2.0.2",
    "PIMS==0.6.1",
    "scipy==1.11.1",
    "scikit-image==0.21.0",
    "trackpy==0.6.1",
    "zarr==2.14.2",
    "numba-progress=1.1.0",
    "install-jdk",
]

[tool.setuptools.package-data]
transcription_pipeline = ["loci_tools.jar"]

[tool.setuptools.packages]
find = {}  # Scan the project directory with the default parameters

[project.scripts]
install_bioformats_jar = "transcription_pipeline.prerequisites.install_bioformats:install_bioformats"
